compiler/toc_hir_lowering/tests/snapshots/lowering__lower_return_stmt.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
assertion_line: 59
expression: return

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..6): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..6): []
        Return@(FileId(1), 0..6)

