compiler/toc_hir_lowering/tests/snapshots/lowering__lower_scoping_inner_use_outer_use.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "begin a := b end a := b"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        Block@(FileId(1), 0..16): Normal
          Assign@(FileId(1), 6..12)
            Name@(FileId(1), 6..7): "a"@(FileId(1), 6..7), undeclared
            Name@(FileId(1), 11..12): "b"@(FileId(1), 11..12), undeclared
        Assign@(FileId(1), 17..23)
          Name@(FileId(1), 17..18): "a"@(FileId(1), 6..7), undeclared
          Name@(FileId(1), 22..23): "b"@(FileId(1), 11..12), undeclared

