compiler/toc_hir_lowering/tests/snapshots/lowering__lower_scoping_outer_use_inner_use.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "q := j begin q := k end"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(0)
    Module@(FileId(1), 0..23): "<root>"@(dummy)
      StmtBody@(FileId(1), 0..23): []
        Assign@(FileId(1), 0..6)
          Name@(FileId(1), 0..1): "q"@(FileId(1), 0..1), undeclared
          Name@(FileId(1), 5..6): "j"@(FileId(1), 5..6), undeclared
        Block@(FileId(1), 7..23): Normal
          Assign@(FileId(1), 13..19)
            Name@(FileId(1), 13..14): "q"@(FileId(1), 0..1), undeclared
            Name@(FileId(1), 18..19): "k"@(FileId(1), 18..19), undeclared
error in file FileId(1) at 0..1: `q` is undeclared
| error in file FileId(1) for 0..1: no definitions of `q` are in scope
error in file FileId(1) at 5..6: `j` is undeclared
| error in file FileId(1) for 5..6: no definitions of `j` are in scope
error in file FileId(1) at 18..19: `k` is undeclared
| error in file FileId(1) for 18..19: no definitions of `k` are in scope

