compiler/toc_hir_lowering/tests/snapshots/lowering__lower_scoping_redeclare_over_def.snap
---
source: compiler/toc_hir_lowering/tests/lowering.rs
expression: "\n    var k : int\n    begin\n        const k := 1\n        const k := 2\n        const k := 3\n    end\n    begin\n        const k := 1.0\n    end\n    k := k"

---
Library@(dummy)
  Root@(dummy): FileId(1) -> ItemId(5)
    Module@(FileId(1), 0..149): "<root>"@(dummy)
      StmtBody@(FileId(1), 5..149): []
        StmtItem@(FileId(1), 5..16): ItemId(0)
          ConstVar@(FileId(1), 5..16): var "k"@(FileId(1), 9..10)
            Primitive@(FileId(1), 13..16): Int
        Block@(FileId(1), 21..97): Normal
          StmtItem@(FileId(1), 35..47): ItemId(1)
            ConstVar@(FileId(1), 35..47): const "k"@(FileId(1), 41..42)
              ExprBody@(FileId(1), 46..47)
                Literal@(FileId(1), 46..47): Integer(1)
          StmtItem@(FileId(1), 56..68): ItemId(2)
            ConstVar@(FileId(1), 56..68): const "k"@(FileId(1), 62..63)
              ExprBody@(FileId(1), 67..68)
                Literal@(FileId(1), 67..68): Integer(2)
          StmtItem@(FileId(1), 77..89): ItemId(3)
            ConstVar@(FileId(1), 77..89): const "k"@(FileId(1), 83..84)
              ExprBody@(FileId(1), 88..89)
                Literal@(FileId(1), 88..89): Integer(3)
        Block@(FileId(1), 102..138): Normal
          StmtItem@(FileId(1), 116..130): ItemId(4)
            ConstVar@(FileId(1), 116..130): const "k"@(FileId(1), 122..123)
              ExprBody@(FileId(1), 127..130)
                Literal@(FileId(1), 127..130): Real(1.0)
        Assign@(FileId(1), 143..149)
          Name@(FileId(1), 143..144): "k"@(FileId(1), 9..10)
          Name@(FileId(1), 148..149): "k"@(FileId(1), 9..10)
error in file FileId(1) at 41..42: `k` is already declared in this scope
| note in file FileId(1) for 9..10: `k` previously declared here
| error in file FileId(1) for 41..42: `k` redeclared here
error in file FileId(1) at 62..63: `k` is already declared in this scope
| note in file FileId(1) for 41..42: `k` previously declared here
| error in file FileId(1) for 62..63: `k` redeclared here
error in file FileId(1) at 83..84: `k` is already declared in this scope
| note in file FileId(1) for 62..63: `k` previously declared here
| error in file FileId(1) for 83..84: `k` redeclared here
error in file FileId(1) at 122..123: `k` is already declared in this scope
| note in file FileId(1) for 9..10: `k` previously declared here
| error in file FileId(1) for 122..123: `k` redeclared here

